# oracle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Oracle_one_move  Oracle_pgn_file  Oracle_web.py  README.md  demo.py  docker-compose.yml  oracle_one_move.py  oracle_pgn_file.py  pyproject.toml  ruff.toml
.github/workflows/: pages.yml
docs/: RELEASE_NOTES.md  demo.html
oracle/: config.py
oracle/core/: _chess.py  pgn.py
oracle/domain/: models.py
oracle/infrastructure/: openai_client.py  stockfish_engine.py
oracle/interfaces/cli/: batch.py  bootstrap.py  single_move.py
oracle/interfaces/web/: app.py
oracle/interfaces/web/templates/: index.html
oracle/services/: evaluation.py  notation.py  pgn.py  reporting.py
oracle/usecases/: batch_prediction.py  single_move.py
src/oracle/application/: __init__.py  ports.py  predict_next_moves.py
src/oracle/core/: pgn.py
src/oracle/domain/: __init__.py  services.py
src/oracle/service/: prediction.py
src/oracle/web/: app.py
src/oracle/web/frontend/: main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/oracle/web/frontend/styles/: board.css
src/oracle/web/static/: github-dark.css  oracle-board.css  oracle-board.js
src/oracle/web/templates/: index.html  result.html
tests/: conftest.py
tests/core/: _chess.py  pgn.py
tests/data/: lichess_annoted.pgn  lichess_raw.pgn
tests/units/: test_oracle_one_move.py
tests/units/application/: test_predict_next_moves.py
tests/units/core/: test_chess.py  test_pgn.py
tests/units/domain/: test_services.py
tests/units/service/: test_prediction_provider.py
tests/units/web/: test_app.py
