[tool.poetry]
name = "oracle"
version = "0.1.0"
description = ""
authors = ["Yosha87 <contact@yoshachess.com>", "Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.41.0"
chess = "^1.10.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
