[tool.poetry]
name = "oracle"
version = "0.1.0"
description = ""
authors = ["Yosha87 <contact@yoshachess.com>", "Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
huggingface-hub = "^0.24.2"
chess = "^1.10.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"
pytest = "^8.3.2"
httpx = "^0.27.2"
mypy = "^1.13.0"
packaging = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# Include the src directory in the PYTHONPATH
pythonpath = ["src"]
